# SudokuSolver

./: .gitignore  CMakeLists.txt
include/: Sudoku.h
samples/: example.sud  example_solved.sud
src/: Sudoku.cpp  SudokuMain.cpp
